--- a/app.json
+++ b/app.json
@@ -438,6 +438,12 @@
           "title": {
             "en": "Wind direction"
           }
+        },
+        {
+          "name": "wind_direction_cp",
+          "title": {
+            "en": "Wind direction °"
+          }
         }
         ],
         "args": [{
