--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "name": {
     "en": "Swedish Weather Forecast"
   },
-  "version": "0.3.0",
+  "version": "0.3.1",
   "compatibility": ">=2.0.0",
   "sdk": 2,
   "description": {
@@ -1817,9 +1817,9 @@
               }
             },
             {
-              "id": "South-West",
+              "id": "South-East",
               "label": {
-                "en": "South-West"
+                "en": "South-East"
               }
             },
             {
