--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "id": "se.swefa",
   "name": {
-    "en": "Weather Forecast from SMHI",
-    "sv": "Väderprognos från SMHI"
+    "en": "Swedish Weather Forecast from SMHI",
+    "sv": "Svensk väderprognos från SMHI"
   },
-  "version": "0.4.3",
+  "version": "0.4.4",
   "compatibility": ">=2.0.0",
   "sdk": 2,
   "description": {
